# boats3

./: .gitignore  CMakeLists.txt  README.md
algorithms/: algorithm1.c  rand_gen_movement.c  rand_gen_movement.h  showGUI.c
assets/: README.md
scripts/: CMakeLists.txt  controller.c  controller.h  main.c  model.c  model.h  transformation.c  view.c  view.h  window.c  window.h
test/: CMakeLists.txt  README.md  test_model.c
